Player Struktur aufgestellt, tasks.json angepasst

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,12 +9,19 @@
              "-g",
              "-I",
              "Handler/",
+             "-I",
+             "Player/",
              "${workspaceFolder}\\*.cpp",
              "Handler/Game_Handler.cpp",
              "Handler/Menu_Handler.cpp",
              "Handler/GUI_Handler.cpp",
              "Handler/Playfield_Handler.cpp",
              "Handler/Player_Handler.cpp",
+             "Player/Player.cpp",
+             "Player/Human_Player.cpp",
+             "Player/Bot.cpp",
+             "Player/Random_Bot.cpp",
+             "Player/Smart_Bot.cpp",
              "-o",
              "${workspaceFolder}\\${fileBasenameNoExtension}.exe"
           ],
