UML angefangen zu real., tasks.json angepasst

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,12 +13,10 @@
              "Player/",
              "${workspaceFolder}\\*.cpp",
              "Handler/Game_Handler.cpp",
-             "Handler/Menu_Handler.cpp",
+             "Handler/Gamesetup_Handler.cpp",
              "Handler/Playfield_Handler.cpp",
-             "Handler/Player_Handler.cpp",
              "Player/Player.cpp",
              "Player/Human_Player.cpp",
-             "Player/Bot.cpp",
              "Player/Random_Bot.cpp",
              "Player/Smart_Bot.cpp",
              "-o",
