--- a/Testing/test/CMakeLists.txt
+++ b/Testing/test/CMakeLists.txt
@@ -1,15 +1,17 @@
 cmake_minimum_required(VERSION 3.8)
 
-set(This gameTest)
+set(This SmartBotTesting)
 
 set(Sources
-    SmartBotTesting.cpp)
+    SmartBotTesting.cpp
+    Random_Bot.cpp
+    Playfield_Handler.cpp)
 
 add_executable(${This} ${Sources})
 
 target_link_libraries(${This} PUBLIC
     gtest_main
-    Testing)
+    testing)
 
 add_test(
     Name ${This}
