--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 3.8.0)
+cmake_minimum_required(VERSION 3.8)
 
-set(This bowling_kata)
+set(This SmartBotTesting)
 
 project(${This} C CXX)
 
 set(CMAKE_C_STANDARD 99)
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 enable_testing()
@@ -13,10 +13,14 @@ enable_testing()
 add_subdirectory(lib/googletest)
 
 set(Headers
-    src/PreSmartBot.hpp)
+    src/PreSmartBot.hpp
+    src/Random_Bot.hpp
+    src/Playfield_Handler.hpp)
 
 set(Sources
-    src/PreSmartBot.cpp)
+    src/PreSmartBot.cpp
+    src/Random_Bot.cpp
+    src/Playfield_Handler.cpp)
 
 add_library(${This} STATIC ${Sources} ${Headers})
 
