--- a/Testing/test/CMakeLists.txt
+++ b/Testing/test/CMakeLists.txt
@@ -1,19 +1,19 @@
 cmake_minimum_required(VERSION 3.8)
 
-set(This SmartBotTesting)
+set(This TicTacToeTest)
 
 set(Sources
-    SmartBotTesting.cpp
-    Random_Bot.cpp
-    Playfield_Handler.cpp)
+
+)
 
 add_executable(${This} ${Sources})
 
 target_link_libraries(${This} PUBLIC
     gtest_main
-    testing)
+    gtest
+)
 
 add_test(
-    Name ${This}
+    NAME ${This}
     COMMAND ${This}
 )
