--- a/Testing/test/CMakeLists.txt
+++ b/Testing/test/CMakeLists.txt
@@ -4,6 +4,9 @@ set(This TicTacToeTest)
 
 set(Sources
     TicTacToeTest.cpp
+    ../../Player/Player.cpp
+    ../../Player/Random_Bot.cpp
+    ../../Handler/Playfield_Handler.cpp
 )
 
 add_executable(${This} ${Sources})
